--- a/back/package.json
+++ b/back/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "cheerio": "1.0.0-rc.12",
     "puppeteer": "^22.6.1",
-    "vitest": "^1.4.0"
+    "vitest": "^1.4.0",
+    "winston": "^3.13.0",
+    "winston-console-format": "^1.0.8"
   }
 }
