--- a/crawling/package.json
+++ b/crawling/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "dev": "run(){ NODE_OPTIONS=--experimental-import-meta-resolve vite-node --watch ${1:-index.js}; };  run",
+    "start": "run(){node ${1:-index.js}; };run",
     "lint": "NODE_OPTIONS=--experimental-import-meta-resolve nextlab-eslint **/*.js ",
     "test": "vitest"
   },
@@ -14,8 +16,12 @@
   "dependencies": {
     "cheerio": "1.0.0-rc.12",
     "puppeteer": "^22.6.1",
+    "redis": "^4.6.13",
     "vitest": "^1.4.0",
     "winston": "^3.13.0",
     "winston-console-format": "^1.0.8"
+  },
+  "devDependencies": {
+    "vite-node": "^1.4.0"
   }
 }
