--- a/crawling/package.json
+++ b/crawling/package.json
@@ -15,13 +15,16 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "1.0.0-rc.12",
+    "date-and-time": "^3.1.1",
     "puppeteer": "^22.6.1",
     "redis": "^4.6.13",
-    "vitest": "^1.4.0",
+    "string-similarity": "^4.0.4",
     "winston": "^3.13.0",
     "winston-console-format": "^1.0.8"
   },
   "devDependencies": {
-    "vite-node": "^1.4.0"
+    "vite": "^5.2.9",
+    "vite-node": "^1.4.0",
+    "vitest": "^1.4.0"
   }
 }
