--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,11 +12,21 @@ services:
     image: mysql:latest
     platform: linux/arm64  #
     environment:
-     MYSQL_ROOT_PASSWORD: 12345678  
+     MYSQL_ROOT_PASSWORD: 123456789  
      MYSQL_DATABASE: chartchart  
-     MYSQL_USER: jiwoong
+     MYSQL_USER: dev
+     MYSQL_PASSWORD: 123456789  
+     LC_ALL : C.UTF-8
     ports:
       - "3306:3306"  
-    volumes:
-      - mysql-data:/var/lib/mysql  
+    command:
+      - --character-set-server=utf8mb4
+      - --collation-server=utf8mb4_unicode_ci
 
+    volumes:
+      - mysql:/var/lib/mysql
+      - ./mysql.cnf:/etc/mysql/mysql.conf.d/mysql.cnf:ro  #
+
+
+volumes:
+  mysql:
