--- a/apiServer/package.json
+++ b/apiServer/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
+    "express-rate-limit": "^7.2.0",
     "express-useragent": "^1.0.15",
     "express-validator": "^7.0.1",
     "morgan": "^1.10.0",
