--- a/apiServer/package.json
+++ b/apiServer/package.json
@@ -23,7 +23,9 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.9.7",
     "winston": "^3.13.0",
-    "winston-console-format": "^1.0.8"
+    "winston-console-format": "^1.0.8",
+    "yamljs": "^0.3.0",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
     "vite": "^5.2.11",
