add eslint.config and name of container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,13 @@ name: chart
 services:
   redis:
     image: redis:7-alpine
+    container_name: redis
     ports:
       - 6379:6379
 
   mysql:
     image: mysql:latest
+    container_name: mysql
     platform: linux/arm64  #
     environment:
      MYSQL_ROOT_PASSWORD: 123456789  
