--- a/react-client/package.json
+++ b/react-client/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "tailwindcss": "^3.4.10",
     "vite-node": "^2.0.5"
   },
