--- a/react-client/package.json
+++ b/react-client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "postcss": "^8.4.45",
     "react": "^18.3.1",
