--- a/ts-crawling/package.json
+++ b/ts-crawling/package.json
@@ -7,12 +7,15 @@
   "scripts": {
     "lint": "eslint .",
     "start": "run(){ NODE_OPTIONS=--experimental-import-meta-resolve vite-node ${1:-index.ts}; }; tsc --noEmit && run",
-    "dev": "run(){ NODE_OPTIONS=--experimental-import-meta-resolve vite-node --watch ${1:-index.ts}; }; tsc --noEmit && run"
+    "dev": "run(){ NODE_OPTIONS=--experimental-import-meta-resolve vite-node --watch ${1:-index.ts}; }; tsc --noEmit && run",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^1.0.0",
+    "lodash": "^4.17.21",
     "winston": "^3.14.2",
     "winston-console-format": "^1.0.8"
   },
@@ -20,14 +23,18 @@
     "@tsconfig/esm": "^1.0.5",
     "@tsconfig/node22": "^22.0.0",
     "@tsconfig/strictest": "^2.0.5",
+    "@types/cheerio": "^0.22.35",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^22.5.5",
     "@typescript-eslint/eslint-plugin": "^8.6.0",
     "eslint": "^9.10.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "globals": "^15.9.0",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.6.0",
     "vite": "^5.4.6",
     "vite-node": "^2.1.1",
-    "vite-plugin-eslint": "^1.8.1"
+    "vite-plugin-eslint": "^1.8.1",
+    "vitest": "^2.1.1"
   }
 }
