--- a/ts-crawling/package.json
+++ b/ts-crawling/package.json
@@ -8,13 +8,15 @@
     "lint": "eslint .",
     "start": "run(){ NODE_OPTIONS=--experimental-import-meta-resolve vite-node ${1:-index.ts}; }; tsc --noEmit && run",
     "dev": "run(){ NODE_OPTIONS=--experimental-import-meta-resolve vite-node --watch ${1:-index.ts}; }; tsc --noEmit && run",
-    "test": "vitest"
+    "test": "vitest",
+    "fetch": "vite-node index.ts fetch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.7",
+    "axios-retry": "^4.5.0",
     "cheerio": "^1.0.0",
     "lodash": "^4.17.21",
     "winston": "^3.14.2",
