--- a/ts-crawling/package.json
+++ b/ts-crawling/package.json
@@ -19,6 +19,8 @@
     "axios-retry": "^4.5.0",
     "cheerio": "^1.0.0",
     "lodash": "^4.17.21",
+    "string-similarity": "^4.0.4",
+    "typeorm": "^0.3.20",
     "winston": "^3.14.2",
     "winston-console-format": "^1.0.8"
   },
@@ -30,6 +32,7 @@
     "@types/cheerio": "^0.22.35",
     "@types/lodash": "^4.17.7",
     "@types/node": "^22.5.5",
+    "@types/string-similarity": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^8.6.0",
     "eslint": "^9.10.0",
     "eslint-config-airbnb-base": "^15.0.0",
