--- a/ts-crawling/package.json
+++ b/ts-crawling/package.json
@@ -18,9 +18,12 @@
   "dependencies": {
     "axios": "^1.7.7",
     "axios-retry": "^4.5.0",
+    "canvas": "^2.11.2",
     "cheerio": "^1.0.0",
     "lodash": "^4.17.21",
     "mysql2": "^3.11.3",
+    "resemblejs": "^5.0.0",
+    "sharp": "^0.33.5",
     "string-similarity": "^4.0.4",
     "typeorm": "^0.3.20",
     "winston": "^3.14.2",
@@ -34,6 +37,7 @@
     "@types/cheerio": "^0.22.35",
     "@types/lodash": "^4.17.7",
     "@types/node": "^22.5.5",
+    "@types/resemblejs": "^4.1.3",
     "@types/string-similarity": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^8.6.0",
     "eslint": "^9.10.0",
