Add Tracks Artists module

--- a/nest-server/.development.env
+++ b/nest-server/.development.env
@@ -6,7 +6,7 @@ APP_LOG_LEVEL=debug
 TYPEORM_HOST=localhost
 TYPEORM_PORT=3306
 TYPEORM_USERNAME=root
-TYPEORM_PASSWORD=a369369@@
-TYPEORM_DATABASE=SLH
+TYPEORM_PASSWORD=a369369@@A
+TYPEORM_DATABASE=TStrackvstrack
 
 
