--- a/nest-server/package.json
+++ b/nest-server/package.json
@@ -19,8 +19,10 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "express-useragent": "^1.0.15",
+    "mysql2": "^3.11.3",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -28,6 +30,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/testing": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.2",
     "@types/express": "^4.17.17",
     "@types/express-useragent": "^1.0.5",
     "@types/jest": "^29.5.2",
