--- a/nest-server/package.json
+++ b/nest-server/package.json
@@ -18,6 +18,8 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "express-useragent": "^1.0.15",
     "mysql2": "^3.11.3",
     "reflect-metadata": "^0.2.0",
