--- a/react-client/package.json
+++ b/react-client/package.json
@@ -14,9 +14,11 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
+    "date-fns": "^4.1.0",
     "postcss": "^8.4.45",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
@@ -27,6 +29,7 @@
     "@eslint/js": "^9.9.0",
     "@types/node": "^22.5.4",
     "@types/react": "^18.3.3",
+    "@types/react-date-range": "^1.4.9",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.1",
