--- a/react-client/package.json
+++ b/react-client/package.json
@@ -21,6 +21,7 @@
     "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.26.2",
     "tailwindcss": "^3.4.10",
     "vite-node": "^2.0.5"
@@ -31,6 +32,7 @@
     "@types/react": "^18.3.3",
     "@types/react-date-range": "^1.4.9",
     "@types/react-dom": "^18.3.0",
+    "@types/react-resizable": "^3.0.8",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.0",
