--- a/react-client/package.json
+++ b/react-client/package.json
@@ -20,6 +20,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-icons": "^5.3.0",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.26.2",
