--- a/react-client/package.json
+++ b/react-client/package.json
@@ -25,6 +25,8 @@
     "react-icons": "^5.3.0",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.26.2",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.10",
     "vite-node": "^2.0.5"
   },
@@ -37,6 +39,7 @@
     "@types/react-grid-layout": "^1.3.5",
     "@types/react-resizable": "^3.0.8",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.0",
     "eslint-config-airbnb-base": "^15.0.0",
