--- a/react-client/package.json
+++ b/react-client/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "date-fns": "^4.1.0",
+    "immer": "^10.1.1",
     "postcss": "^8.4.45",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
@@ -28,6 +29,7 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.10",
+    "use-immer": "^0.10.0",
     "vite-node": "^2.0.5"
   },
   "devDependencies": {
