--- a/react-client/package.json
+++ b/react-client/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "swr": "^2.2.5",
     "tailwindcss": "^3.4.10",
     "use-immer": "^0.10.0",
     "vite-node": "^2.0.5"
