--- a/react-client/tsconfig.app.json
+++ b/react-client/tsconfig.app.json
@@ -26,7 +26,9 @@
       "@layouts/*": ["src/layouts/*"],
       "@pages/*": ["src/pages/*"],
       "@utils/*": ["src/utils/*"],
-      "@typings/*": ["src/typings/*"]
+      "@typings/*": ["src/typings/*"],
+      "@sections/*": ["src/sections/*"],
+      "@constants/*": ["src/constants/*"]
     }
   },
   "include": ["src", "eslint.config.js"]
