Fix name from useStoredTrack to  useCachedTrack

--- a/react-client/tsconfig.node.json
+++ b/react-client/tsconfig.node.json
@@ -11,7 +11,7 @@
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
-    "resolvePackageJsonExports": false,
+    "resolvePackageJsonExports": false, // add
 
     /* Linting */
     "strict": true,
