--- a/react-client/package.json
+++ b/react-client/package.json
@@ -30,8 +30,7 @@
     "slick-carousel": "^1.8.1",
     "swr": "^2.2.5",
     "tailwindcss": "^3.4.10",
-    "use-immer": "^0.10.0",
-    "vite-node": "^2.0.5"
+    "use-immer": "^0.10.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -53,6 +52,7 @@
     "globals": "^15.9.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
+    "vite-node": "^2.0.5",
     "vite": "^5.4.1",
     "vite-plugin-eslint": "^1.8.1"
   }
