--- a/react-client/package.json
+++ b/react-client/package.json
@@ -25,6 +25,7 @@
     "react-draggable": "^4.4.6",
     "react-grid-layout": "^1.5.0",
     "react-icons": "^5.3.0",
+    "react-range": "^1.10.0",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
@@ -53,8 +54,8 @@
     "globals": "^15.9.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite-node": "^2.0.5",
     "vite": "^5.4.1",
+    "vite-node": "^2.0.5",
     "vite-plugin-eslint": "^1.8.1"
   }
 }
