--- a/react-client/package.json
+++ b/react-client/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --mode development",
     "node": "run(){ NODE_OPTIONS=--experimental-import-meta-resolve vite-node ${1:-index.ts}; }; tsc --noEmit && run",
     "build": "tsc -b && vite build",
-    "build:dev": "tsc -b &&vite build --mode development",
+    "build:local": "tsc -b &&vite build --mode development.local",
     "lint": "eslint .",
     "preview": "vite preview"
   },
